# my-autograder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
autograder/: main.py
specs/: spec-autograde.md
tests/: test_autograder.py
